--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 <h1>Open <a href="presentation.html" target="_blank">presentation.html</a> and then click capture to share a tab with presentation</h1>
-<h2>You will see preview of the stream, which could be also stream by e.g. WebRTC</h2>
+<h2>You will see preview of the stream. Then click "Begin" button. Stream could be also streamed by e.g. WebRTC</h2>
 <video id="video"></video>
 <div id="support">
 
